--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="https://raw.githubusercontent.com/paddy-collins/paddy-collins.github.io/master/css/custom.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
       
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
       
