--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <a href="index.html"><p class="navtype">Paddy</p></a>
     </div>
         
-            <div class="col-lg-1 col-2 offset-sm-10 offset-7 fixed worknav"><a href="work.html">
+            <div class="col-lg-1 col-2 offset-sm-10 offset-7 fixed worknav"><a href="project.html">
      <p class="navtype">Work</p></a>
     </div>
         
