--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="col-lg-3 col-5 offset-sm-5 fixed aboutnav nomobile">
         <div class="experiments ">
         <a href="poster.html">
-        <span style='font-size:27px;'>&#129327; <h12 class="expsmaller">Experiments</h12></span>
+        <span style='font-size:27px;'>&#129327; <h12 class="expsmaller">Posters</h12></span>
         </a>
         </div>
         </div>
